--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdn.jsdelivr.net 'unsafe-eval';">
   <title>FLASH USDT GENERATOR | TRC-20</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./css2.css" rel="stylesheet">
